# mav_control_rw

./: .gitignore  CMakeLists.txt  README.md
mav_linear_mpc/resources/: linear_mpc_DJI.yaml
mav_lowlevel_attitude_controller/resources/: PID_attitude_DJI.yaml
mav_nonlinear_mpc/: CMakeLists.txt
mav_nonlinear_mpc/resources/: nonlinear_mpc_DJI.yaml
mav_nonlinear_mpc/solver/: acado_integrator.c  nmpc_solver_setup
